# znay-mesto-mvp

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  terminal
backend/: .dockerignore  Dockerfile  requirements.txt
backend/app/: database.py  main2.py  models.py  schemas.py  seed_data.py  sync_bitrix.py  work_bitrix.py
backend/app/static/: map-embed.css  map-embed.js  styles.css
backend/app/templates/: index.html  map.html
backend/migrations/: add_bitrix_fields.sql
frontend/: map-embed.css  script.js
