[tool.poetry]
name = "znayu-mesto"
version = "0.1.0"
description = "Определение места по координатам"
authors = ["Igor Gerasimov <gerasimov.igor.98@icloud.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.104.1"
uvicorn = "0.24.0"
sqlalchemy = "2.0.23"
pydantic = "2.4.2"
aiosqlite = "^0.19.0"
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"
fast-bitrix24 = "^1.8.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 